--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
-    gtag('config', 'UA-215922650-1',{
+    gtag('config', 'UA-12345-6',{
         send_page_view: false
       });
   </script>
