--- a/sobre.html
+++ b/sobre.html
@@ -2,13 +2,13 @@
 <html lang="pt-br">
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-215922650-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-12345-6"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
-    gtag('config', 'UA-215922650-1',{
+    gtag('config', 'UA-12345-6',{
         send_page_view: false
       });
   </script>
